[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/GameController.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Input/PlayerController1.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Input/PlayerController2.gd" type="Script" id=3]
[ext_resource path="res://Scripts/InputController.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/CameraController.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Block.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/GUIController.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Collectibles/Coin.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Collectibles/Token.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Collectibles/PaperBoat.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Platform.tscn" type="PackedScene" id=12]

[sub_resource type="Environment" id=1]
ambient_light_color = Color( 1, 1, 1, 1 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.219608, 0.219608, 0.219608, 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.25, 10, 1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.486275, 0.486275, 0.486275, 1 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.486275, 0.486275, 0.486275, 1 )

[node name="GameController" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0011816, 0.00827801, -0.00279784 )
script = ExtResource( 1 )

[node name="InputController" type="Node" parent="."]
script = ExtResource( 4 )

[node name="PlayerController1" type="Node" parent="InputController"]
script = ExtResource( 2 )

[node name="PlayerController2" type="Node" parent="InputController"]
script = ExtResource( 3 )

[node name="CameraController" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Camera" type="Camera" parent="CameraController"]
transform = Transform( 1, 0, 0, 0, 0.93159, 0.363511, 0, -0.363511, 0.93159, -0.15989, 0.81043, 1.75058 )
environment = SubResource( 1 )
current = true
fov = 50.0

[node name="LevelController" type="Node" parent="."]

[node name="DirectionalLight" type="DirectionalLight" parent="LevelController"]
transform = Transform( -0.648863, 0.604972, -0.461504, -0.0362033, 0.581286, 0.812893, 0.760044, 0.544164, -0.355273, 0, 0, 0 )

[node name="Player_1" parent="LevelController" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.640749, 0.159397, 0 )

[node name="Jump" parent="LevelController/Player_1/StateMachine" index="2"]
jump_time_to_peak = 0.5
jump_time_to_descent = 0.25

[node name="Player_2" parent="LevelController" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.659949, 0.159397, 0 )

[node name="Jump" parent="LevelController/Player_2/StateMachine" index="2"]
jump_height = 2.0
jump_time_to_peak = 0.5
jump_time_to_descent = 0.25

[node name="Floor" type="Node" parent="LevelController"]

[node name="Block" parent="LevelController/Floor" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.002, -0.51, -0.004 )

[node name="PhysicalShape" parent="LevelController/Floor/Block" index="1"]
width = 50.0
height = 0.5
depth = 10.0
material = SubResource( 2 )

[node name="Block2" parent="LevelController/Floor" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.3787, 0, 0 )

[node name="CollisionShape" parent="LevelController/Floor/Block2" index="0"]
shape = SubResource( 3 )

[node name="PhysicalShape" parent="LevelController/Floor/Block2" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00199652, 0.00762153, -0.003654 )
width = 0.5
height = 20.0
depth = 10.0
material = SubResource( 4 )

[node name="Block4" parent="LevelController/Floor" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.422037, 10.3224, 0 )

[node name="CollisionShape" parent="LevelController/Floor/Block4" index="0"]
shape = SubResource( 3 )

[node name="PhysicalShape" parent="LevelController/Floor/Block4" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00199652, 0.00762153, -0.003654 )
width = 0.5
height = 20.0
material = SubResource( 4 )

[node name="Block5" parent="LevelController/Floor" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.578466, 10.5589, 0 )

[node name="CollisionShape" parent="LevelController/Floor/Block5" index="0"]
shape = SubResource( 3 )

[node name="PhysicalShape" parent="LevelController/Floor/Block5" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00199652, 0.00762153, -0.003654 )
width = 0.5
height = 20.0
material = SubResource( 4 )

[node name="Block3" parent="LevelController/Floor" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.17455, 0, 0 )

[node name="CollisionShape" parent="LevelController/Floor/Block3" index="0"]
shape = SubResource( 3 )

[node name="PhysicalShape" parent="LevelController/Floor/Block3" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00199652, 0.00762153, -0.003654 )
width = 0.5
height = 20.0
depth = 10.0
material = SubResource( 5 )

[node name="Platforms" type="Node" parent="LevelController"]

[node name="Platform" parent="LevelController/Platforms" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 4, 0 )
is_vertical = true
translation_offset = 4.0
animation_time = 6.0

[node name="Platform2" parent="LevelController/Platforms" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.06431, 1.10092, 0 )
translation_offset = 1.0
animation_time = 4.0
time_offset = 2.0

[node name="Collectibles" type="Node" parent="LevelController"]

[node name="Coins" type="Node" parent="LevelController/Collectibles"]

[node name="Coin" parent="LevelController/Collectibles/Coins" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2186, 0 )

[node name="Coin2" parent="LevelController/Collectibles/Coins" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.38939, 0.2186, 0 )
coin_value = 400.0

[node name="Coin3" parent="LevelController/Collectibles/Coins" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.22821, 0.2186, 0 )

[node name="Coin4" parent="LevelController/Collectibles/Coins" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.11137, 0.2186, 0 )

[node name="Coin5" parent="LevelController/Collectibles/Coins" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.38366, 0.2186, 0 )
coin_value = 600.0

[node name="Coin6" parent="LevelController/Collectibles/Coins" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.23451, 0.2186, 0 )

[node name="Coin7" parent="LevelController/Collectibles/Coins" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.23971, 0.2186, 0 )
coin_value = 800.0

[node name="Coin8" parent="LevelController/Collectibles/Coins" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.72749, 0.561327, 0 )
coin_value = 1000.0

[node name="Coin9" parent="LevelController/Collectibles/Coins" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.78843, 0.561327, 0 )

[node name="Coin10" parent="LevelController/Collectibles/Coins" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.75558, 0.561327, 0 )

[node name="Coin11" parent="LevelController/Collectibles/Coins" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.57964, 0.561327, 0 )
coin_value = 400.0

[node name="Tokens" type="Node" parent="LevelController/Collectibles"]

[node name="Token" parent="LevelController/Collectibles/Tokens" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.725172, 0 )

[node name="Token2" parent="LevelController/Collectibles/Tokens" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.16627, 0 )

[node name="Token3" parent="LevelController/Collectibles/Tokens" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.55627, 0 )

[node name="PaperBoats" type="Node" parent="LevelController/Collectibles"]

[node name="PaperBoat" parent="LevelController/Collectibles/PaperBoats" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.02076, 0.23869, 0 )

[node name="MonumentPieces" type="Node" parent="LevelController/Collectibles"]

[node name="GUIController" type="CanvasLayer" parent="."]
script = ExtResource( 8 )

[node name="Margin" type="MarginContainer" parent="GUIController"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="TopGUI" type="HBoxContainer" parent="GUIController/Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 630.0
margin_bottom = 50.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 0
custom_constants/separation = 100

[node name="Player_1" type="HBoxContainer" parent="GUIController/Margin/TopGUI"]
margin_right = 101.0
margin_bottom = 40.0
custom_constants/separation = 10

[node name="Icon" type="ColorRect" parent="GUIController/Margin/TopGUI/Player_1"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
color = Color( 0.333333, 0.462745, 0.815686, 1 )

[node name="Stats" type="VBoxContainer" parent="GUIController/Margin/TopGUI/Player_1"]
margin_left = 50.0
margin_top = 3.0
margin_right = 101.0
margin_bottom = 37.0
size_flags_vertical = 4
custom_constants/separation = 5

[node name="Name" type="Label" parent="GUIController/Margin/TopGUI/Player_1/Stats"]
margin_right = 51.0
margin_bottom = 14.0
text = "Player 1"

[node name="CoinBox" type="HBoxContainer" parent="GUIController/Margin/TopGUI/Player_1/Stats"]
margin_top = 19.0
margin_right = 51.0
margin_bottom = 34.0
custom_constants/separation = 5

[node name="Icon" type="ColorRect" parent="GUIController/Margin/TopGUI/Player_1/Stats/CoinBox"]
margin_right = 15.0
margin_bottom = 15.0
rect_min_size = Vector2( 15, 15 )
color = Color( 0.937255, 0.0666667, 0.0666667, 1 )

[node name="Coins" type="Label" parent="GUIController/Margin/TopGUI/Player_1/Stats/CoinBox"]
margin_left = 20.0
margin_right = 51.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
text = "000c"
valign = 2

[node name="Player_2" type="HBoxContainer" parent="GUIController/Margin/TopGUI"]
margin_left = 519.0
margin_right = 620.0
margin_bottom = 40.0
size_flags_horizontal = 10
custom_constants/separation = 10

[node name="Stats" type="VBoxContainer" parent="GUIController/Margin/TopGUI/Player_2"]
margin_top = 3.0
margin_right = 51.0
margin_bottom = 37.0
size_flags_vertical = 4
custom_constants/separation = 5

[node name="Name" type="Label" parent="GUIController/Margin/TopGUI/Player_2/Stats"]
margin_right = 51.0
margin_bottom = 14.0
text = "Player 2"
align = 2

[node name="CoinBox" type="HBoxContainer" parent="GUIController/Margin/TopGUI/Player_2/Stats"]
margin_top = 19.0
margin_right = 51.0
margin_bottom = 34.0
custom_constants/separation = 5

[node name="Coins" type="Label" parent="GUIController/Margin/TopGUI/Player_2/Stats/CoinBox"]
margin_right = 31.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
text = "000c"
valign = 2

[node name="Icon" type="ColorRect" parent="GUIController/Margin/TopGUI/Player_2/Stats/CoinBox"]
margin_left = 36.0
margin_right = 51.0
margin_bottom = 15.0
rect_min_size = Vector2( 15, 15 )
color = Color( 0.937255, 0.0666667, 0.0666667, 1 )

[node name="Icon" type="ColorRect" parent="GUIController/Margin/TopGUI/Player_2"]
margin_left = 61.0
margin_right = 101.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
color = Color( 0.815686, 0.4, 0.333333, 1 )

[node name="CollectibleUI" type="MarginContainer" parent="GUIController/Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 630.0
margin_bottom = 350.0
custom_constants/margin_top = 25

[node name="ProgressCoins" type="ProgressBar" parent="GUIController/Margin/CollectibleUI"]
margin_left = 235.0
margin_top = 25.0
margin_right = 385.0
margin_bottom = 39.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 6
step = 1.0

[connection signal="player_connected" from="InputController" to="." method="_on_InputController_player_connected"]
[connection signal="player_disconnected" from="InputController" to="." method="_on_InputController_player_disconnected"]
[connection signal="player_switch" from="InputController" to="." method="_on_InputController_player_switch"]
[connection signal="player_ready" from="LevelController/Player_1" to="." method="_on_Player_1_player_ready"]
[connection signal="player_ready" from="LevelController/Player_2" to="." method="_on_Player_2_player_ready"]

[editable path="LevelController/Player_1"]
[editable path="LevelController/Player_2"]
[editable path="LevelController/Floor/Block"]
[editable path="LevelController/Floor/Block2"]
[editable path="LevelController/Floor/Block4"]
[editable path="LevelController/Floor/Block5"]
[editable path="LevelController/Floor/Block3"]
